# dotup

./: .gitignore  Cargo.toml  README.md  prepare_binaries.sh
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
configs/: depot.toml
dotup/: Cargo.toml
dotup/src/: archive.rs  depot.rs  error.rs  lib.rs  utils.rs
dotup/tests/: integration_tests.rs  testing_depot.toml
dotup_cli/: Cargo.toml
dotup_cli/src/: config.rs  main.rs  utils.rs
dotup_cli/src/commands/: init.rs  install.rs  link.rs  mod.rs  mv.rs  status.rs  uninstall.rs  unlink.rs  utils.rs
dotup_cli/tests/: cli.rs
src/: depot.rs  dotup.rs  main.rs  utils.rs
src/config/: mod.rs  parse.rs  parser.rs
src/dotup/: action_tree.rs  cfg.rs  mod.rs  paths.rs
