[package]
name = "dotup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "3.2.21", features = ["derive"] }
env_logger = "0.9.0"
globset = "0.4.9"
log = "0.4.17"
nom = "7.1.1"
nom_locate = "4.0.0"
slotmap = "1.0.6"
thiserror = "1.0.35"
