[package]
name = "dotup"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
env_logger = "0.9"
globset = "0.4"
inquire = "0.6"
log = "0.4"
nom = "7"
nom_locate = "4"
slotmap = "1"
thiserror = "1"
