[package]
edition = "2018"
name = "dotup_cli"
version = "0.1.0"

[[bin]]
name = "dotup"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0"
clap = "3.0.0-rc.4"
log = "0.4"

[dependencies.dotup]
path = "../dotup"

[dependencies.flexi_logger]
features = ["colors"]
version = "0.20"

[dev-dependencies]
tempfile = "3.2"
assert_cmd = "2.0"
