[package]
edition = "2018"
name = "dotup_cli"
version = "0.1.0"

[[bin]]
name = "dotup"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0"
log = "0.4"

[dependencies.clap]
features = ["derive"]
version = "3.0.0-rc.7"

[dependencies.dotup]
path = "../dotup"

[dependencies.flexi_logger]
features = ["colors"]
version = "0.22"

[dev-dependencies]
tempfile = "3.2"
assert_cmd = "2.0"
